--- a/SitePai2/SitePai2/SitePai2.csproj
+++ b/SitePai2/SitePai2/SitePai2.csproj
@@ -92,10 +92,104 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\src2\css\creative.css" />
+    <Content Include="Content\src2\css\creative.min.css" />
+    <Content Include="Content\src2\img\header.jpg" />
+    <Content Include="Content\src2\img\portfolio\fullsize\1.jpg" />
+    <Content Include="Content\src2\img\portfolio\fullsize\2.jpg" />
+    <Content Include="Content\src2\img\portfolio\fullsize\3.jpg" />
+    <Content Include="Content\src2\img\portfolio\fullsize\4.jpg" />
+    <Content Include="Content\src2\img\portfolio\fullsize\5.jpg" />
+    <Content Include="Content\src2\img\portfolio\fullsize\6.jpg" />
+    <Content Include="Content\src2\img\portfolio\fullsize\large.jpg" />
+    <Content Include="Content\src2\img\portfolio\thumbnails\1.jpg" />
+    <Content Include="Content\src2\img\portfolio\thumbnails\2.jpg" />
+    <Content Include="Content\src2\img\portfolio\thumbnails\3.jpg" />
+    <Content Include="Content\src2\img\portfolio\thumbnails\4.jpg" />
+    <Content Include="Content\src2\img\portfolio\thumbnails\5.jpg" />
+    <Content Include="Content\src2\img\portfolio\thumbnails\6.jpg" />
+    <Content Include="Content\src2\js\creative.js" />
+    <Content Include="Content\src2\js\creative.min.js" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap-grid.css" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap-grid.min.css" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap-reboot.css" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap-reboot.min.css" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap.css" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.bundle.js" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.bundle.min.js" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.js" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\src2\vendor\font-awesome\css\font-awesome.css" />
+    <Content Include="Content\src2\vendor\font-awesome\css\font-awesome.min.css" />
+    <Content Include="Content\src2\vendor\font-awesome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\src2\vendor\jquery-easing\jquery.easing.compatibility.js" />
+    <Content Include="Content\src2\vendor\jquery-easing\jquery.easing.js" />
+    <Content Include="Content\src2\vendor\jquery-easing\jquery.easing.min.js" />
+    <Content Include="Content\src2\vendor\jquery\jquery.js" />
+    <Content Include="Content\src2\vendor\jquery\jquery.min.js" />
+    <Content Include="Content\src2\vendor\jquery\jquery.slim.js" />
+    <Content Include="Content\src2\vendor\jquery\jquery.slim.min.js" />
+    <Content Include="Content\src2\vendor\magnific-popup\jquery.magnific-popup.js" />
+    <Content Include="Content\src2\vendor\magnific-popup\jquery.magnific-popup.min.js" />
+    <Content Include="Content\src2\vendor\magnific-popup\magnific-popup.css" />
+    <Content Include="Content\src2\vendor\scrollreveal\scrollreveal.js" />
+    <Content Include="Content\src2\vendor\scrollreveal\scrollreveal.min.js" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <Content Include="Content\src2\scss\creative.scss" />
+    <Content Include="Content\src2\scss\_bootstrap-overrides.scss" />
+    <Content Include="Content\src2\scss\_global.scss" />
+    <Content Include="Content\src2\scss\_masthead.scss" />
+    <Content Include="Content\src2\scss\_mixins.scss" />
+    <Content Include="Content\src2\scss\_navbar.scss" />
+    <Content Include="Content\src2\scss\_portfolio.scss" />
+    <Content Include="Content\src2\scss\_services.scss" />
+    <Content Include="Content\src2\scss\_variables.scss" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap.css.map" />
+    <Content Include="Content\src2\vendor\bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.bundle.js.map" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.js.map" />
+    <Content Include="Content\src2\vendor\bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="Content\src2\vendor\font-awesome\css\font-awesome.css.map" />
+    <Content Include="Content\src2\vendor\font-awesome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Content\src2\vendor\font-awesome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Content\src2\vendor\font-awesome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Content\src2\vendor\font-awesome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Content\src2\vendor\font-awesome\fonts\FontAwesome.otf" />
+    <Content Include="Content\src2\vendor\font-awesome\less\animated.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\bordered-pulled.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\core.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\fixed-width.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\font-awesome.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\icons.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\larger.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\list.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\mixins.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\path.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\rotated-flipped.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\screen-reader.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\stacked.less" />
+    <Content Include="Content\src2\vendor\font-awesome\less\variables.less" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\font-awesome.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_animated.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_bordered-pulled.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_core.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_fixed-width.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_icons.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_larger.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_list.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_mixins.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_path.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_rotated-flipped.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_screen-reader.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_stacked.scss" />
+    <Content Include="Content\src2\vendor\font-awesome\scss\_variables.scss" />
+    <Content Include="Content\src2\vendor\jquery\jquery.min.map" />
+    <Content Include="Content\src2\vendor\jquery\jquery.slim.min.map" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -129,7 +223,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Content\src2\" />
     <Folder Include="Models\" />
   </ItemGroup>
   <PropertyGroup>
